changed z-index on floating view cart button so that it is under modal, preventing it from being opened while cart is already being viewed as part of an add to cart action. When stacked background-color would get dark and not look right

--- a/src/app.css
+++ b/src/app.css
@@ -76,7 +76,7 @@
   text-emphasis: 400;
   background-color: darkgray !important;
   color: white !important;
-  z-index: 9999
+  z-index: 999
 }
 
 .ui.button.ui.basic.grey.button.modalFloating:active {
@@ -86,7 +86,7 @@
   text-emphasis: 400;
   background-color: gray !important;
   color: white !important;
-  z-index: 9999
+  z-index: 999
 }
 
 .productsContainer{
